2006-02-08  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/SpinnerDateModel.java
	(SpinnerDateModel(Date, Comparable, Comparable, int)): Added argument
	checks,
	(getPreviousValue): Check result against start, not end,
	(setValue): Check that value actually changes before firing 
	ChangeEvent.

2006-02-08  Lillian Angel  <langel@redhat.com>

	* java/awt/Choice.java
	(select): Fixed up code, added some checks to prevent errors.
	(dispatchEventImpl): Removed. This function is not needed. It 
	causes several assertion errors.

2006-02-08  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/PlainView.java
	(drawLine): Call drawUnselectedText() with end offset - 1 to avoid
	drawing unnecessary characters.

2006-02-08  Lillian Angel  <langel@redhat.com>

	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
	(handleEvent): Fixed check to determine if height or
	width is less than 1.

2006-02-08  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	*tools/Makefile.am (ALL_TOOLS_FILES): Add $(TOOLS_HELPS).

2006-02-08  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* examples/gnu/classpath/examples/CORBA/swing/x5/_GameManagerImpl_Tie.java,
	examples/gnu/classpath/examples/CORBA/swing/x5/_PlayerImpl_Tie.java:
	Documenting the code generator.
	* gnu/CORBA/IOR.java (toStringFormatted, 
	CodeSet_component.toStringFormatted): New methods.
	* tools/Makefile.am (TOOLS_JAVA_FILES, READMES): Rewritten.
	* tools/gnu/classpath/tools/giop/README: Rewritten.
	* tools/gnu/classpath/tools/giop/GRMIC.java (main): Rewritten. 
	(printHelpAndExit): Removed.
	*tools/gnu/classpath/tools/giop/IorParser.java,
	tools/gnu/classpath/tools/giop/IorParser.txt,
	tools/gnu/classpath/tools/giop/NameService.java,
	tools/gnu/classpath/tools/giop/NamingService.txt,
	tools/gnu/classpath/tools/HelpPrinter.java: New files.
	NEWS: Added note about GIOP tools.

2006-02-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* .classpath: New source patch (tools).