@@ -1,3 +1,8 @@
+2006-02-08  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
+
+	* java/rmi/server/RemoteRef.java,
+	java/rmi/server/RemoteStub.java: Commented.
+
 2006-02-08  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* javax/swing/SpinnerDateModel.java
